--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     </head>
     <body>
         <img src="header.jpg" alt="">
+        <img src="hero.jpg" alt="">
+        
     </body>
 </html>
